# brutessh

./: Cargo.toml  README.md
.github/: CONTRIBUTING.md
src/: cli.rs  main.rs  port.rs  ssh.rs
src/ssh/: checker.rs  mod.rs
src/word/: gen.rs
